--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -1,23 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="70dp">
 
     <ImageView
         android:id="@+id/Image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/TitleText"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
 
-    <TextView
-        android:id="@+id/TitleText"
+    <RelativeLayout
+        android:id="@+id/RelativeLay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:layout_alignRight="@id/Image"
-        android:layout_alignLeft="@id/Image"
-        android:textColor="@android:color/black"
-        android:text="Title" />
+        android:layout_toRightOf="@id/Image"
+        android:layout_alignTop="@id/Image"
+        android:layout_alignBottom="@id/Image"
+        android:layout_marginLeft="10dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/TitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="test"/>
+
+        <TextView
+            android:id="@+id/itemDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_below="@id/TitleText"
+            android:text="I AM VEGAN"/>
+
+    </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:textSize="20sp"
+        android:text="20"/>
 
 </RelativeLayout>
